--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-.idea/workspace.xml
-.idea/tasks.xml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+node_modules/
+.env
 .ftpconfig
 .remote-sync.json
